--- a/index.html
+++ b/index.html
@@ -1,101 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tanishq Pal - Portfolio</title>
   <link rel="stylesheet" href="styles.css">
+  <script src="script.js"></script>
 </head>
-
 <body>
   <header>
     <nav>
-      <div class="container">
-        <h1>Tanishq Pal</h1>
-        <ul>
-          <li><a href="#about">About</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-      </div>
+      <h1>Tanishq Pal</h1>
+      <ul>
+        <li><a href="#about">About</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#publications">Publications</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
     </nav>
   </header>
 
   <main>
-    <section id="hero">
-      <div class="container">
-        <h2>Web Developer</h2>
-        <p class="subtitle">Passionate about creating innovative web solutions.</p>
-        <a href="#contact" class="btn">Hire Me</a>
-      </div>
+    <section id="about">
+      <h2>About Me</h2>
+      <p>
+        I am currently pursuing a B.Tech degree in Computer Science after completing my Class 12th. With a focus on computer science, I have been developing my skills and knowledge in programming, web scraping, and machine learning.
+      </p>
     </section>
 
-    <section id="about">
-      <div class="container">
-        <h2>About Me</h2>
-        <p>
-          I am currently pursuing a B.Tech degree in Computer Science. I am passionate about web development and love
-          creating modern and responsive websites. Although I don't have professional experience, I am eager to gain
-          practical knowledge through internships.
-        </p>
-        <p>
-          In my free time, I enjoy playing chess and learning new things. I achieved All India Rank 1 in olympiads in
-          class 8 and Delhi State Rank 2 in class 9.
-        </p>
-      </div>
+    <section id="skills">
+      <h2>Skills</h2>
+      <ul>
+        <li>Programming</li>
+        <li>Web Scraping</li>
+        <li>Machine Learning</li>
+        <li>JavaScript</li>
+        <li>Python</li>
+      </ul>
     </section>
 
     <section id="projects">
-      <div class="container">
-        <h2>Projects</h2>
-        <ul>
-          <li>
-            <h3>Calculator App</h3>
-            <p>A simple basic calculator</p>
-            <p>JavaScript</p>
-          </li>
-          <li>
-            <h3>Webscraping Practice</h3>
-            <p>I try to scrape toscrape.com</p>
-            <p>Python</p>
-          </li>
-          <li>
-            <h3>Transfer Learning</h3>
-            <p>An application on mobilenet that uses transfer learning to show improvement in accuracy of mobilenet</p>
-            <p>Jupyter Notebook</p>
-          </li>
-          <li>
-            <h3>Gatsby E-commerce Theme</h3>
-            <p>JavaScript</p>
-          </li>
-          <li>
-            <h3>Cloud Attendance System</h3>
-            <p>Cloud-based student attendance system</p>
-            <p>JavaScript</p>
-          </li>
-        </ul>
-      </div>
+      <h2>Projects</h2>
+      <ul>
+        <li>
+          <h3>CalculatorApp</h3>
+          <p>Developed a simple basic calculator using JavaScript.</p>
+        </li>
+        <li>
+          <h3>Webscraping-practice</h3>
+          <p>Explored web scraping techniques by scraping toscrape.com using Python.</p>
+        </li>
+        <!-- Add more project items here -->
+      </ul>
+    </section>
+
+    <section id="publications">
+      <h2>Publications</h2>
+      <ul>
+        <li>
+          <h3>Improving the Implementation of Mobilenet using Transfer Learning</h3>
+          <p>Conference paper.</p>
+        </li>
+      </ul>
     </section>
 
     <section id="contact">
-      <div class="container">
-        <h2>Contact</h2>
-        <p>If you're interested in working together or have any questions, feel free to reach out to me:</p>
-        <ul>
-          <li>Email: mye20e@gmail.com</li>
-        </ul>
-      </div>
+      <h2>Contact Information</h2>
+      <p>Email: <a href="mailto:mye20e@gmail.com">mye20e@gmail.com</a></p>
     </section>
   </main>
 
   <footer>
-    <div class="container">
-      <p>&copy; 2023 Tanishq Pal - Portfolio. All rights reserved.</p>
-    </div>
+    <p>© 2023 Tanishq Pal. All rights reserved.</p>
   </footer>
-
-  <script src="script.js"></script>
 </body>
-
 </html>
