--- a/index.html
+++ b/index.html
@@ -41,19 +41,43 @@
     </section>
 
     <section id="projects">
-      <h2>Projects</h2>
-      <ul>
-        <li>
-          <h3>CalculatorApp</h3>
-          <p>Developed a simple basic calculator using JavaScript.</p>
-        </li>
-        <li>
-          <h3>Webscraping-practice</h3>
-          <p>Explored web scraping techniques by scraping toscrape.com using Python.</p>
-        </li>
-        <!-- Add more project items here -->
-      </ul>
-    </section>
+        <h2>Projects</h2>
+        <ul>
+          <li>
+            <h3>CalculatorApp</h3>
+            <p>Developed a simple basic calculator using JavaScript.</p>
+          </li>
+          <li>
+            <h3>Webscraping-practice</h3>
+            <p>Explored web scraping techniques by scraping toscrape.com using Python.</p>
+          </li>
+          <li>
+            <h3>TransferLearning</h3>
+            <p>Implemented transfer learning on the Mobilenet model, showcasing improvement in accuracy. This project was developed using Jupyter Notebook and is licensed under the MIT License.</p>
+          </li>
+          <li>
+            <h3>gatsby-ecommerce-theme</h3>
+            <p>Contributed to a JavaScript-based eCommerce theme. Updated on Nov 20, 2022.</p>
+          </li>
+          <li>
+            <h3>Cloud_Attendance_System</h3>
+            <p>Contributed to a cloud-based student attendance system using JavaScript. Updated on Nov 14, 2022.</p>
+          </li>
+          <li>
+            <h3>LeetCode-Solutions</h3>
+            <p>Maintained a private collection of LeetCode questions for coding interview preparation, created using LeetHub. Developed solutions using Python. Updated on Oct 31, 2022.</p>
+          </li>
+          <li>
+            <h3>learn-git</h3>
+            <p>Forked a tutorial repository for learning Git. Updated on Oct 23, 2022.</p>
+          </li>
+          <li>
+            <h3>svm_image_classification</h3>
+            <p>Implemented image classification using Support Vector Machines (SVM) in a Jupyter Notebook. Licensed under the MIT License. Updated on Oct 23, 2022.</p>
+          </li>
+        </ul>
+      </section>
+      
 
     <section id="publications">
       <h2>Publications</h2>
@@ -67,7 +91,7 @@
 
     <section id="contact">
       <h2>Contact Information</h2>
-      <p>Email: <a href="mailto:mye20e@gmail.com">mye20e@gmail.com</a></p>
+      <p>Email: <a href="mailto:tanishqpal5851@gmail.com">tanishqpal5851@gmail.com</a></p>
     </section>
   </main>
 
