--- a/index.html
+++ b/index.html
@@ -1,102 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tanishq Pal - Portfolio</title>
-  <link rel="stylesheet" href="styles.css">
-  <script src="script.js"></script>
+  <title>ESP8266 Data Example</title>
+  <script>
+    function fetchData() {
+      fetch("http://192.168.1.104/data") // Replace with your ESP8266 IP address
+        .then(response => response.json())
+        .then(data => {
+          document.getElementById("data").textContent = data.data;
+        })
+        .catch(error => {
+          console.log("Error fetching data:", error);
+        });
+    }
+
+    window.addEventListener("DOMContentLoaded", fetchData);
+  </script>
 </head>
 <body>
-  <header>
-    <nav>
-      <h1>Tanishq Pal</h1>
-      <ul>
-        <li><a href="#about">About</a></li>
-        <li><a href="#skills">Skills</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#publications">Publications</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <main>
-    <section id="about">
-      <h2>About Me</h2>
-      <p>
-        I am currently pursuing a B.Tech degree in Computer Science after completing my Class 12th. With a focus on computer science, I have been developing my skills and knowledge in programming, web scraping, and machine learning.
-      </p>
-    </section>
-
-    <section id="skills">
-      <h2>Skills</h2>
-      <ul>
-        <li>Programming</li>
-        <li>Web Scraping</li>
-        <li>Machine Learning</li>
-        <li>JavaScript</li>
-        <li>Python</li>
-      </ul>
-    </section>
-
-    <section id="projects">
-        <h2>Projects</h2>
-        <ul>
-          <li>
-            <h3>CalculatorApp</h3>
-            <p>Developed a simple basic calculator using JavaScript.</p>
-          </li>
-          <li>
-            <h3>Webscraping-practice</h3>
-            <p>Explored web scraping techniques by scraping toscrape.com using Python.</p>
-          </li>
-          <li>
-            <h3>TransferLearning</h3>
-            <p>Implemented transfer learning on the Mobilenet model, showcasing improvement in accuracy. This project was developed using Jupyter Notebook and is licensed under the MIT License.</p>
-          </li>
-          <li>
-            <h3>gatsby-ecommerce-theme</h3>
-            <p>Contributed to a JavaScript-based eCommerce theme. Updated on Nov 20, 2022.</p>
-          </li>
-          <li>
-            <h3>Cloud_Attendance_System</h3>
-            <p>Contributed to a cloud-based student attendance system using JavaScript. Updated on Nov 14, 2022.</p>
-          </li>
-          <li>
-            <h3>LeetCode-Solutions</h3>
-            <p>Maintained a private collection of LeetCode questions for coding interview preparation, created using LeetHub. Developed solutions using Python. Updated on Oct 31, 2022.</p>
-          </li>
-          <li>
-            <h3>learn-git</h3>
-            <p>Forked a tutorial repository for learning Git. Updated on Oct 23, 2022.</p>
-          </li>
-          <li>
-            <h3>svm_image_classification</h3>
-            <p>Implemented image classification using Support Vector Machines (SVM) in a Jupyter Notebook. Licensed under the MIT License. Updated on Oct 23, 2022.</p>
-          </li>
-        </ul>
-      </section>
-      
-
-    <section id="publications">
-      <h2>Publications</h2>
-      <ul>
-        <li>
-          <h3>Improving the Implementation of Mobilenet using Transfer Learning</h3>
-          <p>Conference paper.</p>
-        </li>
-      </ul>
-    </section>
-
-    <section id="contact">
-      <h2>Contact Information</h2>
-      <p>Email: <a href="mailto:tanishqpal5851@gmail.com">tanishqpal5851@gmail.com</a></p>
-    </section>
-  </main>
-
-  <footer>
-    <p>© 2023 Tanishq Pal. All rights reserved.</p>
-  </footer>
+  <h1>ESP8266 Data Example</h1>
+  <p>Data from ESP8266: <span id="data"></span></p>
 </body>
 </html>
