--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <title>ESP8266 Data Example</title>
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+  </meta>
   <script>
     function fetchData() {
       fetch("http://192.168.1.104/data") // Replace with your ESP8266 IP address
