--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <title>ESP8266 Data Example</title>
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-  </meta>
   <script>
     function fetchData() {
       fetch("http://192.168.1.104/data",{
@@ -23,6 +22,6 @@
 </head>
 <body>
   <h1>ESP8266 Data Example</h1>
-  <p>Data from ESP8266: <span id="data"></span></p>
+  <p>Data from ESP8266 is: <span id="data"></span></p>
 </body>
 </html>
