--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
 </head>
 <body>
   <h1>ESP8266 Data Example</h1>
-  <p>Data from ESP8266 is: <span id="data"></span></p>
+  <p>Data from ESP8266 : <span id="data"></span></p>
 </body>
 </html>
