--- a/index.html
+++ b/index.html
@@ -1,25 +1,40 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>ESP8266 Data Example</title>
-  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-  <script>
-    function fetchData() {
-      fetch("http://192.168.1.104/data") // Replace with your ESP8266 IP address
-        .then(response => response.json())
-        .then(data => {
-          document.getElementById("data").textContent = data.data;
-        })
-        .catch(error => {
-          console.log("Error fetching data:", error);
-        });
-    }
-
-    window.addEventListener("DOMContentLoaded", fetchData);
-  </script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tanishq Pal | Portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>ESP8266 Data Example</h1>
-  <p>Data from ESP8266 : <span id="data"></span></p>
+    <header>
+        <h1>Tanishq Pal</h1>
+        <p>Welcome to my portfolio!</p>
+    </header>
+    <nav>
+        <a href="#about">About Me</a>
+        <a href="#projects">Projects</a>
+        <a href="#contact">Contact</a>
+    </nav>
+    <main>
+        <section id="about">
+            <h2>About Me</h2>
+            <p>Hello! I’m Tanishq Pal, a passionate developer exploring innovative ideas and building amazing projects.</p>
+        </section>
+        <section id="projects">
+            <h2>Projects</h2>
+            <div id="projects-container">
+                <!-- Projects will be loaded dynamically here -->
+            </div>
+        </section>
+        <section id="contact">
+            <h2>Contact</h2>
+            <p>Feel free to reach out to me on <a href="mailto:your_email@example.com">your_email@example.com</a>.</p>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2024 Tanishq Pal. All rights reserved.</p>
+    </footer>
+    <script src="script.js"></script>
 </body>
 </html>
