--- a/index.html
+++ b/index.html
@@ -1,40 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tanishq Pal | Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Portfolio of a fresher programmer showcasing projects">
+  <title>My Portfolio</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Tanishq Pal</h1>
-        <p>Welcome to my portfolio!</p>
-    </header>
-    <nav>
-        <a href="#about">About Me</a>
-        <a href="#projects">Projects</a>
-        <a href="#contact">Contact</a>
-    </nav>
-    <main>
-        <section id="about">
-            <h2>About Me</h2>
-            <p>Hello! I’m Tanishq Pal, a passionate developer exploring innovative ideas and building amazing projects.</p>
-        </section>
-        <section id="projects">
-            <h2>Projects</h2>
-            <div id="projects-container">
-                <!-- Projects will be loaded dynamically here -->
-            </div>
-        </section>
-        <section id="contact">
-            <h2>Contact</h2>
-            <p>Feel free to reach out to me on <a href="mailto:your_email@example.com">your_email@example.com</a>.</p>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2024 Tanishq Pal. All rights reserved.</p>
-    </footer>
-    <script src="script.js"></script>
+  <header>
+    <div class="container">
+      <h1>My Portfolio</h1>
+      <p>Welcome! I am a fresher looking for opportunities in programming.</p>
+    </div>
+  </header>
+  <main>
+    <section id="projects">
+      <h2>Projects</h2>
+      <div id="project-list"></div>
+    </section>
+  </main>
+  <footer>
+    <p>&copy; 2024 My Portfolio. All rights reserved.</p>
+  </footer>
+  <script src="script.js"></script>
 </body>
 </html>
