--- a/project1/index.html
+++ b/project1/index.html
@@ -79,7 +79,8 @@ function flipOrNext(){
 }
 
 // Use only click (works on desktop and mobile without double-firing)
-card.addEventListener('click', flipOrNext);
+card.addEventListener('pointerup', flipOrNext);
+
 </script>
 </body>
 </html>
