--- a/project1/index.html
+++ b/project1/index.html
@@ -7,19 +7,25 @@
 <style>
   body {
     margin:0; height:100vh; display:flex; flex-direction:column;
-    font-family:sans-serif; background:#f5f5f5; user-select:none;
+    font-family:sans-serif; background:#121212; color:#eee;
+    user-select:none;
   }
   header {
     padding:8px; display:flex; flex-wrap:wrap; gap:6px;
-    background:#fff; border-bottom:1px solid #ddd;
+    background:#1e1e1e; border-bottom:1px solid #333;
     font-size:14px;
   }
+  header label { color:#ccc; }
   #card {
     flex:1; display:flex; align-items:center; justify-content:center;
     font-size:clamp(28px,10vw,72px); text-align:center;
     padding:20px; margin:12px; border-radius:12px;
-    background:white; box-shadow:0 4px 12px rgba(0,0,0,.15);
+    background:#1e1e1e; box-shadow:0 4px 12px rgba(0,0,0,.6);
     cursor:pointer;
+
+    /* Disable tap highlight on mobile */
+    -webkit-tap-highlight-color: transparent;
+    -webkit-touch-callout: none;
   }
 </style>
 </head>
@@ -78,9 +84,8 @@ function flipOrNext(){
   else{showQuestion();}
 }
 
-// Use only click (works on desktop and mobile without double-firing)
+// Pointer event works on both touch + mouse without double triggers
 card.addEventListener('pointerup', flipOrNext);
-
 </script>
 </body>
 </html>
