--- a/project1/index.html
+++ b/project1/index.html
@@ -7,12 +7,12 @@
 <style>
   body {
     margin:0; height:100vh; display:flex; flex-direction:column;
-    font-family:sans-serif; background:#121212; color:#eee;
+    font-family:sans-serif; background:#000000; color:#eee;
     user-select:none;
   }
   header {
     padding:8px; display:flex; flex-wrap:wrap; gap:6px;
-    background:#1e1e1e; border-bottom:1px solid #333;
+    background:#000000; border-bottom:1px solid #222;
     font-size:14px;
   }
   header label { color:#ccc; }
@@ -20,7 +20,7 @@
     flex:1; display:flex; align-items:center; justify-content:center;
     font-size:clamp(28px,10vw,72px); text-align:center;
     padding:20px; margin:12px; border-radius:12px;
-    background:#1e1e1e; box-shadow:0 4px 12px rgba(0,0,0,.6);
+    background:#000000; box-shadow:0 4px 12px rgba(0,0,0,.8);
     cursor:pointer;
 
     /* Disable tap highlight on mobile */
